--- a/dashboard/src/app/page.module.css
+++ b/dashboard/src/app/page.module.css
@@ -1220,6 +1220,7 @@
   font-size: 17px;
   font-weight: 600;
   margin: 0;
+  margin-left: 32px;
 }
 
 .widgetHeader .widgetIcon {
